src/core-crm/objects/Engagement_List_Criteria__c/Engagement_List_Criteria__c.object-meta.xml
<CustomObject>
    <description>Contains the entry or exit criteria or ad hoc import information for an engagement list configuration.</description>
    <label>Engagement List Criteria</label>
    <nameField>
        <label>Engagement List Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement List Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>