src/core-crm/objects/Engagement_List_Criteria__c/fields/Academic_Status__c.field-meta.xml
<CustomField>
    <fullName>Academic_Status__c</fullName>
    <description>The academic status of the student to include in the criteria</description>
    <label>Academic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Academic_Status</valueSetName>
    </valueSet>
</CustomField>