src/core-crm/objects/Engagement_List_Criteria__c/fields/Assessment_Priority__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Priority__c</fullName>
    <description>The priority of the assessment the criteria should filter students by</description>
    <label>Assessment Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Priority</valueSetName>
    </valueSet>
</CustomField>