src/core-crm/objects/Engagement_List_Criteria__c/fields/Breach__c.field-meta.xml
<CustomField>
    <fullName>Breach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The breach to include in the criteria</description>
    <label>Breach</label>
    <referenceTo>Breach__c</referenceTo>
    <relationshipLabel>Engagement List Criteria</relationshipLabel>
    <relationshipName>Engagement_List_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>