src/core-crm/objects/Engagement_List_Criteria__c/fields/Cases_Created__c.field-meta.xml
<CustomField>
    <fullName>Cases_Created__c</fullName>
    <description>The total number of cases that have been created for that criteria</description>
    <label>Cases Created</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>