src/core-crm/objects/Engagement_List_Criteria__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <description>The setting to filter by the category of the program that student is enrolled in</description>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduate Certificate</fullName>
            </value>
            <value>
                <fullName>Graduate Diploma - Existing Area</fullName>
            </value>
            <value>
                <fullName>Graduate Diploma - New Area</fullName>
            </value>
            <value>
                <fullName>Masters by Coursework - Double Degree</fullName>
            </value>
            <value>
                <fullName>Masters by Coursework - Single</fullName>
            </value>
            <value>
                <fullName>Masters by Research</fullName>
            </value>
            <value>
                <fullName>Bachelor Honours - Graduate Entry</fullName>
            </value>
            <value>
                <fullName>Bachelor Honours Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor Honours/Masters by Coursework Double Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor Honours/Pass Double Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor Pass Degree - Graduate Entry</fullName>
            </value>
            <value>
                <fullName>Bachelor Pass Double Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor Pass Single Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor Pass/Masters by Coursework Double Degree</fullName>
            </value>
            <value>
                <fullName>Undergraduate Certificate</fullName>
            </value>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Certificate and University Certificate</fullName>
            </value>
            <value>
                <fullName>Diploma and University Diploma</fullName>
            </value>
            <value>
                <fullName>Advanced Dip (AQF Term)/Diploma (Pre-AQF Term) (Hist Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 