src/core-crm/objects/Engagement_List_Criteria__c/fields/Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Status__c</fullName>
    <description>Citizenship status to filter contact for criteria</description>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Citizenship_Status</valueSetName>
    </valueSet>
</CustomField>