src/core-crm/objects/Engagement_List_Criteria__c/fields/Completed_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Completed_Cadence__c</fullName>
    <description>Completed cadence that engagement list criteria follows</description>
    <label>Completed Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Accepted</fullName>
            </value>
            <value>
                <fullName>Admitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>