src/core-crm/objects/Engagement_List_Criteria__c/fields/Course_Grade__c.field-meta.xml
<CustomField>
    <fullName>Course_Grade__c</fullName>
    <description>The course grade used to filter for criteria</description>
    <label>Course Grade</label>
    <length>5</length>
    <type>Text</type>
</CustomField>