src/core-crm/objects/Engagement_List_Criteria__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the engagement list criteria</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>