src/core-crm/objects/Engagement_List_Criteria__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the engagement list criteria</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>