src/core-crm/objects/Engagement_List_Criteria__c/fields/Engagement_List_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Engagement_List_Configuration__c</fullName>
    <description>The engagement list configuration the engagement list criteria belongs to</description>
    <label>Engagement List Configuration</label>
    <referenceTo>Engagement_List_Configuration__c</referenceTo>
    <relationshipLabel>Engagement List Criteria</relationshipLabel>
    <relationshipName>Engagement_List_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>