src/core-crm/objects/Engagement_List_Criteria__c/fields/Engagement_List_Criteria_Title__c.field-meta.xml
<CustomField>
    <fullName>Engagement_List_Criteria_Title__c</fullName>
    <description>A short title describing the Engagement List Criteria.</description>
    <label>Engagement List Criteria Title</label>
    <length>160</length>
    <type>Text</type>
</CustomField> 