src/core-crm/objects/Engagement_List_Criteria__c/fields/Engagement_List_Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_List_Criteria_Type__c</fullName>
    <description>The type of the engagement list criteria</description>
    <label>Engagement List Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry</fullName>
            </value>
            <value>
                <fullName>Exit</fullName>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>