src/core-crm/objects/Engagement_List_Criteria__c/fields/Equity_Scholarship_Bursary__c.field-meta.xml
<CustomField>
    <fullName>Equity_Scholarship_Bursary__c</fullName>
    <description>Whether the criteria should filter to equity scholarship or bursaries</description>
    <label>Equity Scholarship Bursary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>