src/core-crm/objects/Engagement_List_Criteria__c/fields/Failed_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Failed_Assessment__c</fullName>
    <description>Whether the criteria should filter to student who failed assessment or not</description>
    <label>Failed Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>