src/core-crm/objects/Engagement_List_Criteria__c/fields/Has_Domestic_Phone__c.field-meta.xml
<CustomField>
    <fullName>Has_Domestic_Phone__c</fullName>
    <description>Whether the mobile phone number is populated with phone local set to Australia</description>
    <label>Has Domestic Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>