src/core-crm/objects/Engagement_List_Criteria__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that engagement list criteria is active or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>