src/core-crm/objects/Engagement_List_Criteria__c/fields/Is_On_Leave_of_Absence__c.field-meta.xml
<CustomField>
    <fullName>Is_On_Leave_of_Absence__c</fullName>
    <description>Whether the student is currently on a leave of absence</description>
    <label>Is On Leave of Absence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>