src/core-crm/objects/Engagement_List_Criteria__c/fields/Key_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Date__c</fullName>
    <description>The name of the key date field used to offset from to define a time period</description>
    <label>Key Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment Date</fullName>
            </value>
            <value>
                <fullName>Leave Of Absence End Date</fullName>
            </value>
            <value>
                <fullName>Completed Cadence Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>