src/core-crm/objects/Engagement_List_Criteria__c/fields/Key_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Offset__c</fullName>
    <description>The number of days to offset form key date field. Positive numbers indicate days after while the negative indicate days prior to date in Key date field</description>
    <label>Key Date Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>