src/core-crm/objects/Engagement_List_Criteria__c/fields/Key_Date_Offset_Upper_Boundary__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Offset_Upper_Boundary__c</fullName>
    <description>The number of days to offset from key date field. Positive numbers indicate days after while the negative indicate days prior to date in Key date field.</description>
    <label>Key Date Offset Upper Boundary</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>