src/core-crm/objects/Engagement_List_Criteria__c/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>