src/core-crm/objects/Engagement_List_Criteria__c/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>