src/core-crm/objects/Engagement_List_Criteria__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>A unique business identifier for the engagement list criteria</description>
    <displayFormat>ELC-{000000}</displayFormat>
    <label>Engagement List Criteria Name</label>
    <type>AutoNumber</type>
</CustomField>