src/core-crm/objects/Engagement_List_Criteria__c/fields/Preview_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Preview_Job_Id__c</fullName>
    <description>The job ID of the running asynchronous process</description>
    <label>Preview Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>