src/core-crm/objects/Engagement_List_Criteria__c/fields/Preview_Result_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Preview_Result_Attachment_Id__c</fullName>
    <description>The attachment ID of the generated CSV file</description>
    <label>Preview Result Attachment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>