src/core-crm/objects/Engagement_List_Criteria__c/fields/Preview_Result_URL__c.field-meta.xml
<CustomField>
    <fullName>Preview_Result_URL__c</fullName>
    <description>The URL to the final preview result CSV file</description>
    <formula>IF(ISBLANK(Preview_Result_Attachment_ID__c), &apos;Not Generated&apos;, HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; + Preview_Result_Attachment_ID__c, &apos;View Preview Results (.csv)&apos;, &apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview Result URL</label>
    <type>Text</type>
</CustomField>