src/core-crm/objects/Engagement_List_Criteria__c/fields/Preview_Status__c.field-meta.xml
<CustomField>
    <fullName>Preview_Status__c</fullName>
    <description>The status of the preview generation process</description>
    <label>Preview Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Generated</fullName>
                <default>true</default>
                <label>Not Generated</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>