src/core-crm/objects/Engagement_List_Criteria__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The start date of the engagement list criteria</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>