src/core-crm/objects/Engagement_List_Criteria__c/recordTypes/Entry_Criteria.recordType-meta.xml
<RecordType>
    <fullName>Entry_Criteria</fullName>
    <active>true</active>
    <label>Entry Criteria</label>
</RecordType>