src/core-crm/objects/Engagement_List_Criteria__c/recordTypes/Imported.recordType-meta.xml
<RecordType>
    <fullName>Imported</fullName>
    <active>true</active>
    <label>Imported</label>
</RecordType>