src/core-crm/objects/Engagement_List_Criteria__c/validationRules/Criteria_Is_Deactivated.validationRule-meta.xml
<ValidationRule>
    <fullName>Criteria_Is_Deactivated</fullName>
    <active>true</active>
    <description>When a criteria record is deactivated, its status can no longer be changed.</description>
    <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  ISPICKVAL(PRIORVALUE(Status__c),&quot;Deactivated&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>The criteria can no longer be deactivated.</errorMessage>
</ValidationRule>